<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.16">
  <DUT Name="DW_TO_REAL" Id="{aef19258-72af-4aec-a051-0c5b6a8309f1}">
    <Declaration><![CDATA[TYPE DW_TO_REAL :

UNION
	IntAsWord: ARRAY[0..1] OF WORD;
	IntAsReal: REAL;
END_UNION

END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>