<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.26">
  <POU Name="DP_CONFIG_IN_EL6731" Id="{eb53bb15-179b-43ee-80f5-22fa50d1d68b}">
    <Declaration><![CDATA[PROGRAM DP_CONFIG_IN_EL6731
VAR
	UNION_DW2REAL_1 : DW_TO_REAL;	
	UNION_DW2REAL_2: DW_TO_REAL;	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[ACT_NC_PROGRAM:=DP_MOSI_WORD_1;													
ACT_NC_PROGRAM_STEP:=DP_MOSI_WORD_2;	
ACT_NC_PARAM_3:=DP_MOSI_WORD_3;	
ACT_NC_PARAM_4:=DP_MOSI_WORD_4;	
UNION_DW2REAL_1.IntAsWord[0] := DP_MOSI_WORD_3;	
UNION_DW2REAL_1.IntAsWord[1] := DP_MOSI_WORD_4;	
ACT_NC_PARAM_5:= UNION_DW2REAL_1.IntAsReal;

UNION_DW2REAL_2.IntAsWord[0] := DP_MOSI_WORD_1;	
UNION_DW2REAL_2.IntAsWord[1] := DP_MOSI_WORD_2;	
ACT_NC_PARAM_6:= UNION_DW2REAL_2.IntAsReal;


]]></ST>
    </Implementation>
    <ObjectProperties />
  </POU>
</TcPlcObject>